2010-10-28  Pascal Massimino  <pascal.massimino@gmail.com>

Reviewed by Adam Barth.

        fix setSize() call flow: it was only called the first
        time (when onlySize is true)
        Bug URL: https://bugs.webkit.org/show_bug.cgi?id=48494

        Testing: difficult to exercise the bug, as it requires
        some manual flow (change tab, scroll,...)

        * platform/image-decoders/webp/WEBPImageDecoder.cpp:
        (WebCore::WEBPImageDecoder::decode):
           fix: call setSize() even when onlySize is false

Canonical link: https://commits.webkit.org/61274@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70758 268f45cc-cd09-0410-ab3c-d52691b4dbfc